<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/locationCardView"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/find_offline"
            android:textColor="@color/purple_200"
            android:textSize="16sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            >
        <androidx.cardview.widget.CardView
            android:id="@+id/cardwhistle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            app:cardBackgroundColor="@color/btn_green"
            app:cardCornerRadius="18dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="12dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/locationCardView"
                    android:fontFamily="@font/poppins_bold"
                    android:paddingTop="10dp"
                    android:paddingRight="10dp"
                    android:text="@string/find_by_whistle"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/find_your_phone_with_just_whistle"
                    android:textColor="@color/black"
                    android:textSize="10sp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/whistle"
                    android:layout_width="145dp"
                    android:layout_height="52dp"
                    android:layout_gravity="right"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/poppins_semibold"
                    android:gravity="center"
                    android:text="@string/whistle"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    app:cornerRadius="12dp"
                    app:icon="@drawable/whistle_icon"
                    app:iconGravity="textStart" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_below="@+id/cardwhistle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="25dp"
            app:cardBackgroundColor="@color/btn_green"
            app:cardCornerRadius="18dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="12dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/locationCardView"
                    android:fontFamily="@font/poppins_bold"
                    android:paddingTop="10dp"
                    android:paddingRight="10dp"
                    android:text="@string/find_by_clap"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/find_your_phone_with_just_a_clap"
                    android:textColor="@color/black"
                    android:textSize="10sp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/clap"
                    android:layout_width="145dp"
                    android:layout_height="52dp"
                    android:layout_gravity="right"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/poppins_semibold"
                    android:gravity="center"
                    android:text="@string/clap"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    app:cornerRadius="12dp"
                    app:icon="@drawable/clap_icon"
                    app:iconGravity="textStart" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>
